@@ -12,6 +12,7 @@ Fixed: Data insertion problem in add expert front page
 Fixed: Cannot properly save skills from the back end
 Fixed: Cannot upload avatar image from front end
 Fixed: Credit can't be sent to any user
+Fixed: Post type error for jbp_expert, changed into jbp_pro
 
 
 
